# skidy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  analyze_my_robot.py  crex.py  hopperUrdf.py  hopping_leg.py  kinematics_generator.py  mainifest.xml  pyproject.toml  requirements.txt  setup.py  unit_testing.py  variable_dependency_diagram.graphml
.github/: manifest.xml
Benchmarking/: benchmarking.py  r.yaml  rrr.yaml
Examples/: 2R_robotic_arm.py  crex.py  double_pendulum.py  hopperUrdf.py  hopping_leg.py  hopping_leg_fromURDF.py  lambda_mechanism.py  single_pendulum.py
Examples/meshes/: base_link.STL  link_1.STL
KinematicsGenerator/: __init__.py  kinematics_generator.py  matrices.py  parser.py  yaml_parser.py
benchmarking/: .gitignore  benchmarking.py  r.yaml  rr.yaml  rrr.yaml  rrrr.yaml
doc/: create_doc.py  tutorial.md
doc/html/: search.js  skidy.html
documentation/html/: index.html  search.js  (+1 more)
examples/: 2R_robotic_arm.py  2R_robotic_arm.yaml  PRR.yaml  crex.py  double_pendulum.py  double_pendulum.yaml  hopperUrdf.py  hopping_leg.py  hopping_leg_fromURDF.py  lambda_mechanism.py  lambda_mechanism.yaml  quad.yaml  single_pendulum.py  single_pendulum.yaml
generated_code/: body_acceleration.m  body_acceleration_ee.m  body_jacobian_matrix.m  body_jacobian_matrix_dot.m  body_jacobian_matrix_ee.m  body_jacobian_matrix_ee_dot.m  body_twist_ee.m  coriolis_centrifugal_matrix.m  forward_kinematics.m  generalized_mass_inertia_matrix.m  gravity_vector.m  hybrid_acceleration.m  hybrid_acceleration_ee.m  hybrid_jacobian_matrix.m  hybrid_jacobian_matrix_dot.m  hybrid_jacobian_matrix_ee.m  hybrid_jacobian_matrix_ee_dot.m  hybrid_twist_ee.m  inverse_dynamics.m  plant.c  plant.h  plant.py  system_jacobian_dot.m  system_jacobian_matrix.m
kinematics_generator/: __init__.py  __main__.py  kinematics_generator.py  matrices.py  parser.py
skidy/: __init__.py  __main__.py  kinematics_generator.py  matrices.py  symbols.py
test/: unit_testing.py
unit_testing/: unit_testing.py
(+18 files in other folders)
